Some touch-event forwarding optimization.

If there is no touch-event handler installed for a webpage, then do not send
touch-events.

Corresponding webkit change: https://bugs.webkit.org/show_bug.cgi?id=77440

BUG=110237
TEST=none (suggestions?)

Review URL: https://chromiumcodereview.appspot.com/9233058

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@122163 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: ea93125d7961a09ba90d44a9c3013483399a2051