content/renderer/render_view_impl.cc
@@ -3220,6 +3220,10 @@ void RenderViewImpl::numberOfWheelEventHandlersChanged(unsigned num_handlers) {
   Send(new ViewHostMsg_DidChangeNumWheelEvents(routing_id_, num_handlers));
 }
 
+void RenderViewImpl::numberOfTouchEventHandlersChanged(unsigned num_handlers) {
+  Send(new ViewHostMsg_DidChangeNumTouchEvents(routing_id_, num_handlers));
+}
+
 void RenderViewImpl::reportFindInPageMatchCount(int request_id, int count,
                                                 bool final_update) {
   int active_match_ordinal = -1;  // -1 = don't update active match ordinal
